--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
     <!-- PWA -->
     <meta name="theme-color" content="#000000" />
-    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     
     <!-- Favicon -->
